src/test/deca/codegen/invalid/objet/debordementPile/PilePleinPorg.deca
// Description : pile pleine avec un programme trop "gros"
// Resultat : erreur lors de ima -p avec une pile petite

class A{

    int x = 1;
    
    int getX(){
        return x;
    }

    void printX(){
        println("Me voici dans la classe mère");
    }
}
class B extends A{
    int y = 0;

    int getY(){
        return y;
    }
    
    //La méthode printX est override par la fille
    void printX(){
        println("Me voici dans la classe fille");
    }
}
{
    A a = new A();
    B b = new B();
    a.printX();
    b.printX();
    //b devrait avoir les méthode getX de A, getY et printX de B
    
}

